--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bitnoi.se/react-scheduler": "^0.3.1",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@schedule-x/drag-and-drop": "^2.12.1",
+    "@schedule-x/event-modal": "^2.12.1",
+    "@schedule-x/events-service": "^2.12.1",
+    "@schedule-x/react": "^2.12.1",
+    "@schedule-x/theme-default": "^2.12.1",
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,11 +29,14 @@
     "react-day-picker": "^9.4.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
