--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@schedule-x/drag-and-drop": "^2.12.1",
     "@schedule-x/event-modal": "^2.12.1",
     "@schedule-x/events-service": "^2.12.1",
@@ -29,6 +30,7 @@
     "react-day-picker": "^9.4.4",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.14.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
